[UI] Add admin layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,13 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5">
-      <%= yield %>
-    </main>
+    <%= render 'layouts/navbar' %>
+    <%= render 'layouts/sidebar' %>
+
+    <div class="p-4 sm:ml-64">
+      <div class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700 mt-14">
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
