Apply dry ecosystem when createa a new service

--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_with(model: service, class: "mb-7") do |form| %>
+  <%= render "shared/error_message", errors: @errors %>
+
   <div class="mb-5">
     <%= form.text_field :name, placeholder: "Service name",
       class: "inline-block w-96 px-3 py-2 mt-2 shadow rounded-md border border-gray-200 outline-none" %>
